cmake_minimum_required(VERSION 3.5)

project(patterns)

add_subdirectory(abstract-factory)
add_subdirectory(builder)
add_subdirectory(factory-method)
add_subdirectory(prototype)
add_subdirectory(singleton)

add_subdirectory(bridge)
add_subdirectory(composite)
add_subdirectory(command)
add_subdirectory(strategy)
add_subdirectory(decorator)
add_subdirectory(iterator)
add_subdirectory(visitor)