cmake_minimum_required(VERSION 3.5)

project(patterns)

add_subdirectory(abstract-factory)
add_subdirectory(builder)
add_subdirectory(factory-method)
add_subdirectory(prototype)
add_subdirectory(singleton)

add_subdirectory(adapter)
add_subdirectory(bridge)
add_subdirectory(composite)
add_subdirectory(decorator)
add_subdirectory(facade)
add_subdirectory(flyweight)
add_subdirectory(proxy)

add_subdirectory(chain-of-responsibility)
add_subdirectory(command)
add_subdirectory(interpreter)
add_subdirectory(mediator)
add_subdirectory(memento)
add_subdirectory(observer)
add_subdirectory(strategy)
add_subdirectory(state)
add_subdirectory(iterator)
add_subdirectory(visitor)